--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     </head>
     <body>
         <div>
-            <h1>Welcome Carlos J. Rivera</h1>
+            <h1>Header</h1>
+        </div>
+        <div>
+            <h1>Main</h1>
         </div>
     </body>
 </html>
