--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>My Website</title>
+	<script src="main.js">
     </head>
     <body>
         <div>
@@ -8,6 +10,8 @@
         </div>
         <div>
             <h1>Main</h1>
+	    <button type="button" onclick="myFunction()">Hello Carlos from: </button>
+	    <p id="demo"/>
         </div>
     </body>
 </html>
