script and html clean up

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Website</title>
-	<script src="main.js">
+        <title>Welcom</title>
+        <script src="main.js"></script>
     </head>
     <body>
+        <h1>Hello</h1>
         <div>
             <h1>Header</h1>
         </div>
         <div>
             <h1>Main</h1>
-	          <button type="button" onclick="myFunction()">Hello Carlos from: </button>
-	          <p id="demo"/>
+              <input type="button" onclick="popup()" value="click"/>
+	          <p id="demo"></p>
         </div>
     </body>
 </html>
